--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,18 @@
 {
     "name": "jacobss/multiple-token-auth",
+    "version": "1.0.0",
     "license": "MIT",
     "authors": [
         {
             "name": "Jacob Aretz",
             "email": "jacob.aretz@home.nl"
         }
+    ],
+    "keywords": [
+        "laravel",
+        "auth",
+        "tokens",
+        "guard"
     ],
     "require": {
         "php": "^7.1",
@@ -14,20 +21,17 @@
         "illuminate/auth": "^5.8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.1"
     },
     "autoload": {
         "psr-4": {
             "MultipleTokenAuth\\": "src"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "MultipleTokenAuth\\": "tests"
+    "extra": {
+        "laravel": {
+            "providers": [
+                "MultipleTokenAuth\\MultipleTokenAuthServiceProvider"
+            ]
         }
-    },
-    "scripts": {
-        "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
     }
 }
