--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Jacob Aretz",
-            "email": "jacob.aretz@home.nl"
+            "name": "Jacob Aretz"
         }
     ],
     "keywords": [
@@ -18,14 +17,24 @@
         "php": "^7.1",
         "illuminate/support": "~5.6.0|~5.7.0|~5.8.0",
         "illuminate/database": "~5.6.0|~5.7.0|~5.8.0",
-        "illuminate/auth": "^5.8"
+        "illuminate/auth": "~5.6.0|~5.7.0|~5.8.0"
     },
     "require-dev": {
+        "orchestra/testbench": "^3.5",
+        "fzaninotto/faker": "^1.8"
     },
     "autoload": {
         "psr-4": {
             "MultipleTokenAuth\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests"
+        },
+        "classmap": [
+            "tests/Factories"
+        ]
     },
     "extra": {
         "laravel": {
